crates/tui/snapshots/fullscreen/state/dictation_download_fullscreen_zh.snap
---
source: crates/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                                   [仪 表 盘 ]  
                                                                                
> /voice                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  听 写  · 正 在 下 载  model_quant.onnx： 2.0 MiB · ctrl+c 停 止 听 写                    
  ────────────────────────────────────────────────────────────────────────────  
  > keep draft                                                                  
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  ⏸ 手 动
