crates/tui/snapshots/fullscreen/state/dictation_ready_to_review.snap
---
source: crates/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                            Dictation stopped.  
  ────────────────────────────────────────────────────────────────────────────  
  > Please fix the parser and run tests                                         
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual
