crates/tui/snapshots/fullscreen/state/english_punctuation_slash_completion_chinese.snap
---
source: crates/tui/src/app/state_tests.rs
expression: "format!(\"Completion\\n{completion}\\n\\nDismissed\\n{dismissed}\")"
---
Completion
  .                                                                   [仪 表 盘 ]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────── 1/38   
  /context                   查 看 上 下 文 占 用 与 可 用 输 入 容 量                       ┃
  /status                    查 看 会 话 身 份 、 线 程 累 计 消 耗 与 诊 断                   │
  /usage                     查 看 账 户 额 度 、 余 额 和 重 置 时 间                       │
  /statusline                选 择 状 态 栏 中 显 示 的 项 目                             │
  /skills                    浏 览 和 管 理 技 能                                     │
  /memories                  管 理 记 忆 、 读 取 许 可 和 模 型 保 存                       │
  ────────────────────────────────────────────────────────────────────────────  
  > /                                                                           
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  ⏸ 手 动                                                                         

Dismissed
  .                                                                   [仪 表 盘 ]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > /                                                                           
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  ⏸ 手 动
