crates/tui/snapshots/fullscreen/state/kimi_subscription_signed_out_chinese.snap
---
source: crates/tui/src/app/state_tests.rs
expression: "crate::app::usage_tests::render(&app, 96, 24)"
---
  .                                                                                   [仪表盘]

            ┌── 配置 › Kimi ───────────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> 登录 Kimi                                                           │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────└──────────────────────────────────────────────────────────────────────┘──────────
  > 构建任何内容
  ────────────────────────────────────────────────────────────────────────────────── 自动模型

  Esc 返回
